ProductSearch handled but return of send message is broken